--- a/M003/MainPage.xaml
+++ b/M003/MainPage.xaml
@@ -9,31 +9,18 @@
 		</LinearGradientBrush>
 	</ContentPage.Background>
 	<ScrollView>
-        <VerticalStackLayout Padding="30,0" Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
+		<StackLayout Orientation="Vertical">
+			<Label
                 Text="Welcome to &#10;.NET Multi-platform App UI"
                 Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+				VerticalOptions="CenterAndExpand"/>
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
+                Text="Click me"
                 Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
+				VerticalOptions="End"/>
+        </StackLayout>
     </ScrollView>
 
 </ContentPage>
